objects/fbm__Configuration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration settings for the FunnelBeam application</description>
    <fields>
        <fullName>fbm__API_Key__c</fullName>
        <label>API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fbm__Condition_Account_Insert__c</fullName>
        <label>Account Insert Condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fbm__Condition_Account_Update__c</fullName>
        <label>Account Update Condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fbm__Condition_Contact_Insert__c</fullName>
        <label>Contact Insert Condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fbm__Condition_Contact_Update__c</fullName>
        <label>Contact Update Condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fbm__Condition_Lead_Insert__c</fullName>
        <label>Lead Insert Condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fbm__Condition_Lead_Update__c</fullName>
        <label>Lead Update Condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fbm__Enable_Account_Delete_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable Account Delete Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fbm__Enable_Account_Insert_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Account Insert Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fbm__Enable_Account_Update_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Account Update Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fbm__Enable_Contact_Delete_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable Contact Delete Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fbm__Enable_Contact_Insert_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Contact Insert Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fbm__Enable_Contact_Update_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Contact Update Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fbm__Enable_Enrichment_Update_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable Enrichment Update Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fbm__Enable_Lead_Delete_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable Lead Delete Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fbm__Enable_Lead_Insert_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Lead Insert Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fbm__Enable_Lead_Update_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Lead Update Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fbm__Frontend_URL__c</fullName>
        <description>Frontend of Funnel Beam</description>
        <label>Frontend URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fbm__Service_URL__c</fullName>
        <description>Endpoint provided by Funnel Beam</description>
        <label>Service URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fbm__Support_Email__c</fullName>
        <defaultValue>&quot;sfdc-app-support@funnelbeam.com&quot;</defaultValue>
        <label>Support Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FunnelBeam Configuration</label>
</CustomObject>